# pretraining-safety-annotation

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  EXPERIMENTS.md  README.md  app.js  data.js  docker-compose.yml  entrypoint.sh  experiment_tracker.py  gpu_monitor.py  preflection_judge_v1_prompt.md  preflection_judge_v6_prompt.md  preflection_sample_iter12.md  preflection_v1_prompt.md  preflection_v1_results.json  preflection_v2_eval_results.json  preflection_v2_prompt.md  preflection_v2_results.json  preflection_v3_eval_results.json  preflection_v3_prompt.md  preflection_v4_eval_results.json  preflection_v4_heldout_results.json  preflection_v4_prompt.md  preflection_v5_prompt.md  preflection_v5_seed42_results.json  preflection_v5_seed99_results.json  preflection_v6_prompt.md  preflection_v7_prompt.md  preflection_v8_prompt.md  pyproject.toml  style.css
annotation/: backup.py  config.py  dashboard.py  generate_sample.py  sampling.py  storage.py
configs/: config.yaml
dashboard/: .gitignore  README.md  app.py  requirements.txt
docs/: README.md  app.js  build_data.py  data.js  index.html  style.css
pipeline/: MODEL_SELECTION.md  agent_utils.py  api.py  backup.py  config.py  dashboard.py  data.py  generation.py  improver_tools.py  log.py  loop.py  run.py  storage.py  tokenizer.py
preflection_shards/: shard_0.md  shard_1.md  shard_2.md  shard_3.md
preprocessing/: AGENTS.md  README.md  download.py  download_job.sh  estimate_chars_per_token.py
resources/: ModelRaisingConstitution_v0.1.md  canaries.yaml
scripts/: README.md  backfill_reflection_token_index.py  build_pbsft_instruct.py  build_sft_safety_with_originals.py  clean_citations_plot.py  dclm_citation_bracket_analysis.py  dclm_edu_count.py  dclm_edu_token_stats.py  dclm_edu_token_stats_filtered.py  download_10m.sh  download_1B.sh  iterate_refusal_reflection.py  materialize_instruct_prompts.py  migrate_improver_data.py  migrate_jsonl_to_sqlite.py  rejudge_feedback_v5.py  run_consistency.py  run_edge_cases_eval.py  run_generation_sweep.py  run_multilingual.py  sft_safety_stats.py  smoke_common.py  submit_reflections_10m.sh  submit_reflections_test.sh  submit_refusal_reflection_10m.sh  submit_refusal_reflection_test.sh  test_model_request.py  verify_rng_replay.py  verify_tokenizer_match.py
tests/: test_charter_eval_generators.py  test_charter_eval_items.py  test_charter_eval_judges.py  test_charter_eval_rank.py  test_charter_eval_report.py  test_charter_eval_storage.py  test_charter_improve_surgical.py  test_charter_scale_canaries.py  test_charter_scale_export.py  test_charter_scale_generate.py  test_charter_scale_main.py  test_charter_scale_merge.py  (+20 more)
(+276 files in other folders)
