[project]
name = "model-raising-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.6.1",
    "huggingface-hub>=1.5.0",
    "hydra-core>=1.3.2",
    "krippendorff>=0.8.2",
    "nicegui>=3.8.0",
    "omegaconf>=2.3.0",
    "openai>=2.25.0",
    "pyfirecrest>=3.7.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "streamlit>=1.55.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
