[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[project]
name = "model-raising-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.6.1",
    "datatrove>=0.8.0",
    "fire>=0.7.1",
    "gradio>=6.18.0",
    "hf>=1.17.0",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=1.5.0",
    "hydra-core>=1.3.2",
    "ipykernel>=7.2.0",
    "json-repair>=0.61.0",
    "krippendorff>=0.8.2",
    "langdetect>=1.0.9",
    "loguru>=0.7.3",
    "matplotlib>=3.8",
    "nvidia-ml-py>=13.595.45",
    "omegaconf>=2.3.0",
    "openai>=2.25.0",
    "pyfirecrest>=3.7.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "streamlit>=1.55.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "zstandard>=0.25.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
preprocessing = [
    "torch>=2.0",
]
